# strategyexplainer

./: .env.example  .gitignore  BATCH_BACKTEST_GUIDE.md  CLAUDE.md  STRATEGY_README.md  analyze_batch_results.py  batch_backtest.py  demo_strategy_suite.py  pyproject.toml
.streamlit/: config.toml  secrets.toml
app/components/: charts.py  enhanced_analytics_layout.py  gpt_display.py  metrics_cards.py  professional_results_layout.py  sidebar.py
app/pages/: enhanced_strategy_analyzer.py  strategy_analyzer.py
app/pages/enhanced_analyzer/: __init__.py  ai_analysis.py  analysis_pipeline.py  display.py  utils.py
backend/: data_loader.py  enhanced_metrics.py  enhanced_simulator.py  gpt_report.py  gpt_service.py  metrics.py  metrics_dashboard.py  ml_classifier.py  momentum_backtest.py  simulate.py  strategy_engine.py  visualize.py
backend/strategies/: __init__.py  base.py  enhanced_base.py  introspection.py  mean_reversion.py  overlays.py  parameters.py  regime_switch.py  sentiment_overlay.py  sma_ema_rsi.py  vol_breakout.py
backend/strategies/breakout/: __init__.py  channel_breakout.py  volatility_breakout.py  volume_breakout.py
backend/strategies/examples/: __init__.py  enhanced_macd_strategy.py
backend/strategies/mean_reversion/: __init__.py  bollinger_bands.py  combo_reversion.py  rsi2_strategy.py  rsi_divergence.py  (+1 more)
backend/utils/: __init__.py  logging_config.py
config/: __init__.py  config.yaml  config_manager.py  settings.py  strategies.yaml  strategy_config.json
data/cache/: AAPL_2023-01-01_2023-06-01.pkl
tests/: test_momentum_backtest.py
(+8 files in other folders)
